clusterdata/std/quench_24210197_2
  File "gquench_cluster.py", line 86
    
                                                                        ^
SyntaxError: unexpected EOF while parsing
